# heyi.am

./: .gitignore  .teamrc.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  package-lock.json  package.json  team-knowledge.md
.githooks/: pre-commit
.github/workflows/: daemon-build.yml
cli/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
cli/app/: package-lock.json  package.json  vite.config.ts
cli/src/: analyzer.test.ts  analyzer.ts  archive.test.ts  archive.ts  auth.test.ts  (+49 more)
cli2/: .env.example  .npmignore  package-lock.json  package.json  tsconfig.json
daemon/src-tauri/: Cargo.toml  tauri.conf.json
daemon/src-tauri/src/: cli.rs  main.rs  status.rs  watcher.rs
dev/: seaweedfs-s3.json
docs/: ARCHITECTURE.md  AUTH_MIGRATION.md  CODEBASE_FIXES.md  CONTENT_LIFECYCLE.md  COOLIFY_DEPLOY.md  DURATION.md  HOWDOYOUVIBE.md  IMPLEMENTATION_PLAN.md  LLM_PROXY_PLAN.md  MANUAL_TEST_PLAN.md  NEXT_PHASE.md  PORTFOLIO_IMPLEMENTATION.md  PORTFOLIO_PREVIEW_PRD.md  PORTFOLIO_UX.md  PRD.md  PRODUCT.md  RENDERING_ARCHITECTURE.md  SESSION_VIEWER_VISION.md  STATS.md  STAT_FRAMEWORK.md  STAT_PICKER_UX_SPEC.md  SUBAGENT_PRODUCT_SPEC.md  SUBAGENT_UX_SPEC.md  TEMPLATE_BROWSER_SPEC.md  TEMPLATE_FIX_LEARNINGS.md  TEMPLATE_READABILITY_PASS.md  TEMPLATE_SYSTEM_PLAN.md  UMBRELLA_MIGRATION.md
heyi_am_umbrella/: .dockerignore  AGENTS.md  Dockerfile  README.md  mix.exs
phoenix/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  dev.sh  mix.exs
scripts/: sync-phoenix-assets.sh
(+1090 files in other folders)
