[package]
name = "heyiam-tray"
version = "0.1.0"
description = "Background archiving daemon for heyi.am"
authors = ["heyi.am contributors"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_kqueue"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
